раздел факты + футер

--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -10,7 +10,7 @@ main {
   max-width: 327px;
   position: absolute;
   left: 58%;
-  top: -550px;
+  top: -670px;
 }
 .form input {
   padding-left: 30px;
@@ -70,5 +70,6 @@ main {
   .form {
     margin-top: 70px;
     max-width: 90%;
+    padding-top: 0;
   }
 }
