--- a/source/sass/address.scss
+++ b/source/sass/address.scss
@@ -16,7 +16,6 @@
   font-weight: 600;
 }
 .address__text {
-
   margin-top: 30px;
   margin-bottom: 41px;
   font-weight: 400;
@@ -30,4 +29,65 @@
 
 .address__map {
   background: url("../img/map-desktop@1x.jpg") center no-repeat;
+  height: 530px;
+}
+
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .address__map {
+    background: url("../img/map-desktop@2x.jpg") center no-repeat;
+    background-size: 957px auto;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .address-container {
+    max-width: 698px;
+  }
+  .address__inner {
+  }
+  .address__head {
+    font-size: 24px;
+  }
+  .address__text {
+    width: 629px;
+    margin: 20px auto;
+  }
+  .address__map {
+    background: url("../img/map-tablet@1x.jpg") center no-repeat;
+    height: 545px;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .address__map {
+      background: url("../img/map-tablet@2x.jpg") center no-repeat;
+      background-size: 698px auto;
+    }
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .address-container {
+    width: 100%;
+  }
+  .address__inner {
+  }
+  .address__head {
+    font-size: 18px;
+  }
+  .address__text {
+    padding: 0 16px;
+    width: 90%;
+    margin-bottom: 25px;
+  }
+  .address__map {
+    background: url("../img/map-mobile@1x.jpg") center no-repeat;
+    height: 250px;
+  }
+
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .address__map {
+      background: url("../img/map-mobile@2x.jpg") center no-repeat;
+      background-size: 320px auto;
+    }
+  }
 }
