--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   width: 548px;
   font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
 }
 
 .footer__mail {
@@ -29,9 +30,34 @@
 
 .footer__tel a {
   color: rgba(0, 0, 0, 0.5);
-
 }
 .footer__icon-phone {
   margin-right: 15.5px;
   background-color: #ffffff;
+}
+
+@media (max-width: $mobile-width) {
+  .footer {
+    width: auto;
+    flex-wrap: wrap;
+
+  }
+  .footer__mail {
+    justify-content: center;
+    align-self: center;
+    flex-grow: 1;
+
+
+  }
+  .footer__icon-mail {
+
+  }
+  .footer__tel {
+    justify-content: center;
+    flex-grow: 1;
+    margin-left: -20px;
+
+  }
+  .footer__icon-phone {
+  }
 }
