--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -1,8 +1,8 @@
 .footer {
-  margin: 39px auto 98px auto;
+  margin: 34px auto 88px auto;
   display: flex;
   justify-content: space-between;
-  width: 548px;
+  width: 560px;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: normal;
 }
@@ -26,38 +26,43 @@
   align-items: center;
   font-size: 16px;
   line-height: 32px;
+  flex-basis: 205px;
 }
 
 .footer__tel a {
   color: rgba(0, 0, 0, 0.5);
 }
 .footer__icon-phone {
-  margin-right: 15.5px;
+  margin-right: 18.5px;
   background-color: #ffffff;
+}
+
+@media (max-width: $tablet-width) {
+  .footer {
+    margin: 15px auto 30px auto;
+  }
 }
 
 @media (max-width: $mobile-width) {
   .footer {
+    display: block;
     width: auto;
     flex-wrap: wrap;
+    margin: 27px auto 30px auto;
 
   }
   .footer__mail {
     justify-content: center;
     align-self: center;
     flex-grow: 1;
-
-
-  }
-  .footer__icon-mail {
+    margin-bottom: 20px;
 
   }
+
   .footer__tel {
     justify-content: center;
     flex-grow: 1;
-    margin-left: -20px;
 
   }
-  .footer__icon-phone {
-  }
+
 }
