--- a/source/sass/facts.scss
+++ b/source/sass/facts.scss
@@ -4,17 +4,18 @@
   font-weight: normal;
 }
 .facts__container {
-  max-width: 1260px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 15px;
 }
-.facts__head {
+.facts__title {
   margin: 0;
   font-weight: 600;
   font-size: 30px;
   line-height: 30px;
   color: #1f1f1f;
   text-align: center;
+  padding-left: 15px;
 }
 .facts__list {
   display: flex;
@@ -40,8 +41,8 @@
     line-height: 38px;
     color: $cyan;
     font-weight: bold;
-    left: 115px;
-    top: -47px;
+    left: 117px;
+    top: -52px;
   }
 
   &--bg2::before {
@@ -66,17 +67,18 @@
     margin-top: 70px;
   }
   .facts__container {
-    padding: 0;
+    padding: 0 65px;
   }
-  .facts__head {
+  .facts__title {
     font-size: 24px;
     line-height: 41px;
+    padding-left: 5px;
   }
   .facts__list {
     margin-top: 86px;
+
   }
   .facts__item {
-
     margin-bottom: 93px;
   }
 }
@@ -85,9 +87,34 @@
   .facts__item {
     font-size: 18px;
     width: 290px;
+    margin-bottom: 90px;
+    display: block;
+
 
     &::before {
       left: 130px;
     }
+
+    &--bg1 {
+      margin-bottom: 75px;
+    }
+
+    &--bg2 {
+      margin-bottom: 105px;
+    }
+
+    &--bg3{
+      margin-bottom: 105px;
+    }
+  }
+
+  .facts__container {
+    padding: 0 10px;
+  }
+
+  .facts__list p{
+    display: block;
+
+
   }
 }
