--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -9,8 +9,8 @@ main {
   padding-top: 20px;
   max-width: 327px;
   position: absolute;
-  left: 58%;
-  top: -670px;
+  left: 56%;
+  top: -674px;
 }
 .form input {
   padding-left: 30px;
@@ -52,15 +52,18 @@ main {
 
 @media (max-width: $tablet-width) {
   .form {
-    max-width: 41.8%;
-    margin: 0 auto;
+    max-width: 42.1%;
+    margin: 40px auto 0 auto;
     position: relative;
     left: 0;
     top: 0;
+    padding-top: 0;
   }
   .form__head {
     color: #000000;
     font-size: 18px;
+    padding-top: 30px;
+    margin-bottom: 30px;
   }
   .form__submit {
   }
@@ -68,8 +71,12 @@ main {
 
 @media (max-width: $mobile-width) {
   .form {
-    margin-top: 70px;
+    margin-top: 40px;
     max-width: 90%;
     padding-top: 0;
+  }
+
+  .form__head {
+    margin-bottom: 20px;
   }
 }
