--- a/source/sass/address.scss
+++ b/source/sass/address.scss
@@ -1,13 +1,13 @@
-.address {
-}
 .address-container {
   max-width: 957px;
   margin: 0 auto;
 }
+
 .address__inner {
   font-family: "Open Sans", "Arial", sans-serif;
   text-align: center;
 }
+
 .address__head {
   font-size: 30px;
   line-height: 30px;
@@ -15,6 +15,7 @@
   color: #1f1f1f;
   font-weight: 600;
 }
+
 .address__text {
   margin-top: 30px;
   margin-bottom: 41px;
@@ -43,17 +44,23 @@
   .address-container {
     max-width: 698px;
   }
-  .address__inner {
-  }
+
   .address__head {
     font-size: 24px;
   }
+
   .address__text {
     width: 629px;
     margin: 20px auto;
   }
+
   .address__map {
     background: url("../img/map-tablet@1x.jpg") center no-repeat;
+    height: 545px;
+  }
+
+  .address__iframe {
+    width: 698px;
     height: 545px;
   }
 
@@ -69,18 +76,24 @@
   .address-container {
     width: 100%;
   }
-  .address__inner {
-  }
+
   .address__head {
     font-size: 18px;
   }
+
   .address__text {
     padding: 0 16px;
     width: 90%;
     margin-bottom: 25px;
   }
+
   .address__map {
     background: url("../img/map-mobile@1x.jpg") center no-repeat;
+    height: 250px;
+  }
+
+  .address__iframe {
+    width: 100%;
     height: 250px;
   }
 
