--- a/source/sass/facts.scss
+++ b/source/sass/facts.scss
@@ -3,11 +3,13 @@
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: normal;
 }
+
 .facts__container {
-  max-width: 1280px;
+  max-width: 1230px;
   margin: 0 auto;
   padding: 0 15px;
 }
+
 .facts__title {
   margin: 0;
   font-weight: 600;
@@ -17,14 +19,16 @@
   text-align: center;
   padding-left: 15px;
 }
+
 .facts__list {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
   padding: 0;
   margin-top: 102px;
   margin-bottom: 0;
 }
+
 .facts__item {
   width: 263px;
   text-align: center;
@@ -66,20 +70,28 @@
   .facts {
     margin-top: 70px;
   }
+
   .facts__container {
-    padding: 0 65px;
+    padding: 0 75px;
   }
+
   .facts__title {
     font-size: 24px;
     line-height: 41px;
     padding-left: 5px;
   }
+
   .facts__list {
     margin-top: 86px;
-
+    justify-content: space-around;
   }
+
   .facts__item {
     margin-bottom: 93px;
+
+    &:nth-child(odd) {
+      padding-left: 5px;
+    }
   }
 }
 
@@ -103,7 +115,7 @@
       margin-bottom: 105px;
     }
 
-    &--bg3{
+    &--bg3 {
       margin-bottom: 105px;
     }
   }
@@ -112,9 +124,7 @@
     padding: 0 10px;
   }
 
-  .facts__list p{
+  .facts__list p {
     display: block;
-
-
   }
 }
