--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -1,6 +1,7 @@
 main {
   position: relative;
 }
+
 .form {
   font-family: "Open Sans", "Arial", sans-serif;
   display: flex;
@@ -12,6 +13,7 @@ main {
   left: 56%;
   top: -674px;
 }
+
 .form input {
   padding-left: 30px;
   font-weight: normal;
@@ -29,7 +31,8 @@ main {
     opacity: 0.5;
   }
 }
-.form__head {
+
+.form__title {
   margin: 0;
   margin-bottom: 20px;
   font-weight: 600;
@@ -38,6 +41,7 @@ main {
   text-align: center;
   color: #ffffff;
 }
+
 .form__submit {
   background-color: $cyan;
   height: 51px;
@@ -59,13 +63,16 @@ main {
     top: 0;
     padding-top: 0;
   }
-  .form__head {
+
+  .form__title {
     color: #000000;
     font-size: 18px;
     padding-top: 30px;
     margin-bottom: 30px;
   }
-  .form__submit {
+
+  .form input {
+    padding-left: 20px;
   }
 }
 
@@ -76,7 +83,7 @@ main {
     padding-top: 0;
   }
 
-  .form__head {
+  .form__title {
     margin-bottom: 20px;
   }
 }
