--- a/source/sass/types.scss
+++ b/source/sass/types.scss
@@ -5,12 +5,15 @@
   margin-top: 103px;
   padding-top: 150px;
 }
+
 .types__container {
   max-width: 1266px;
-  padding: 0 70px;
+  padding-left: 80px;
+  padding-right: 60px;
   margin: 0 auto;
   overflow: hidden;
 }
+
 .types__inner {
   display: flex;
   justify-content: space-between;
@@ -88,13 +91,14 @@
   margin-bottom: 0;
 }
 
-.types__head {
+.types__title {
   font-weight: 600;
   font-size: 30px;
   line-height: 30px;
   margin-top: 0;
   text-align: center;
   margin-bottom: 50px;
+  margin-left: -25px;
   color: #1f1f1f;
 }
 
@@ -104,14 +108,17 @@
     padding-top: 50px;
     margin-top: -22px;
   }
+
   .types__container {
     padding: 0 40px;
   }
-  .types__head {
+
+  .types__title {
     font-size: 24px;
     line-height: 41px;
     margin-bottom: 29px;
   }
+
   .types__inner {
     justify-content: space-evenly;
     padding-bottom: 24px;
@@ -128,6 +135,7 @@
       top: 200px;
     }
   }
+
   .types__inner a:nth-child(2) {
     padding-top: 0;
 
@@ -174,6 +182,7 @@
 
   .types__inner {
     padding-bottom: 0;
+    justify-content: space-around;
   }
 
   .types__inner a {
