--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -236,20 +236,22 @@ h1 {
   }
 
   .header__inner-title {
+    padding-right: 5px;
     font-size: 30px;
     line-height: 42px;
     text-align: center;
   }
 
   .header__inner-text {
-    padding-left: 5px;
+    padding-right: 5px;
     margin-top: 20px;
     display: block;
     align-self: center;
     font-size: 18px;
     line-height: 32px;
     text-align: center;
-    width: 65%;
+    width: 62%;
+    letter-spacing: -0.005em;
   }
 
   .header__inner-block--active {
