--- a/source/sass/video.scss
+++ b/source/sass/video.scss
@@ -9,9 +9,6 @@
 .video__container {
   max-width: 929px;
   margin: 0 auto;
-}
-
-.video__inner {
   padding-top: 120px;
 }
 
@@ -72,11 +69,13 @@
     margin-bottom: 155px;
   }
 
-  .video__container {
-    max-width: 503px;
+  .video img {
+    width: 503px;
+    height: 282px;
   }
 
-  .video__inner {
+  .video__container {
+    max-width: 503px;
     padding-top: 70px;
   }
 
@@ -109,18 +108,20 @@
     margin-bottom: 119px;
   }
 
+  .video img {
+    width: 288px;
+    height: 161.66px;
+  }
+
   .video__container {
     padding: 0 15px;
     max-width: 320px;
+    padding-top: 85px;
   }
 
   .video__title {
     margin-left: -10px;
     letter-spacing: -0.005em;
-  }
-
-  .video__inner {
-    padding-top: 85px;
   }
 
   .video__content {
