--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -1,21 +1,21 @@
-main {
-  position: relative;
-}
-
 .form {
   font-family: "Open Sans", "Arial", sans-serif;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding-top: 20px;
   max-width: 327px;
-  position: absolute;
-  left: 58%;
-  top: -673px;
+  margin-top: -47px;
+  margin-right: 15px;
 }
 
+.form label {
+  position: absolute;
+  top:-1000px;
+  left:-1000px;
+};
+
 .form input {
-  padding-left: 25px;
+  padding-left: 27px;
   font-weight: normal;
   height: 48px;
   border: 1px solid #c9ccd4;
@@ -50,7 +50,7 @@ main {
   color: #ffffff;
 }
 
-.form__submit {
+.form button {
   background-color: $cyan;
   height: 51px;
   border: none;
@@ -65,8 +65,8 @@ main {
 
 @media (max-width: $tablet-width) {
   .form {
-    max-width: 42.1%;
-    margin: 40px auto 0 auto;
+    max-width: 42.8%;
+    margin: 120px auto 0 auto;
     position: relative;
     left: 0;
     top: 0;
@@ -83,13 +83,18 @@ main {
   .form input {
     padding-left: 20px;
   }
+
+  .form__wrapper {
+    margin-left: -10px;
+  }
 }
 
 @media (max-width: $mobile-width) {
   .form {
-    margin-top: 38px;
+    margin-top: 109px;
     max-width: 90%;
     padding-top: 0;
+    margin: 109px auto 0 auto;
   }
 
   .form input {
