--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -151,6 +151,7 @@ h1 {
 
     &--active {
       display: block;
+      margin-top: -540px;
     }
   }
 
@@ -223,6 +224,9 @@ h1 {
       background-image: url("../img/cross.svg");
       background-repeat: no-repeat;
       background-position: center;
+      position: absolute;
+      top: -540px;
+      left: calc(100% - 50px);
     }
   }
 
